--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "sqlite3": "^4.1.1"
   }
 }
