--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.0",
     "fs": "0.0.1-security",
     "morgan": "^1.10.0",
+    "sanitizer": "^0.1.3",
     "sqlite3": "^4.1.1"
   }
 }
