--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/michb155/WebTechApp#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "fs": "0.0.1-security",
     "morgan": "^1.10.0",
     "sanitizer": "^0.1.3",
+    "serve-favicon": "^2.5.0",
     "sqlite3": "^4.1.1"
   }
 }
